<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/exp_toolbar_game_inc" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorLightBlue"
            android:textSize="14sp"
            android:text="@string/wins"
            app:layout_constraintBottom_toTopOf="@+id/board"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            tools:text="wins" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:id="@+id/player1WinCount"
            app:layout_constraintTop_toTopOf="@id/wins"
            app:layout_constraintBottom_toBottomOf="@id/wins"
            app:layout_constraintRight_toLeftOf="@+id/wins" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:id="@+id/player2WinCount"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/wins"
            app:layout_constraintBottom_toBottomOf="@id/wins"
            app:layout_constraintLeft_toRightOf="@+id/wins" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:id="@+id/turn"
            android:background="@color/colorLightBlue"
            android:text="@string/turn"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/board"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            tools:text="turn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:text="@string/xValue"
            android:textSize="60sp"
            android:id="@+id/player1Symbol"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@id/turn"
            app:layout_constraintBottom_toBottomOf="@id/turn"
            app:layout_constraintRight_toLeftOf="@+id/turn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_right"
            android:id="@+id/leftIndicator1"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/player1Symbol"
            app:layout_constraintRight_toLeftOf="@+id/player1Symbol"
            app:layout_constraintBottom_toBottomOf="@+id/player1Symbol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_left"
            android:id="@+id/rightIndicator1"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/player1Symbol"
            app:layout_constraintLeft_toRightOf="@+id/player1Symbol"
            app:layout_constraintBottom_toBottomOf="@+id/player1Symbol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/oValue"
            android:textSize="45sp"
            android:id="@+id/player2Symbol"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@+id/turn"
            app:layout_constraintBottom_toBottomOf="@+id/turn"
            app:layout_constraintLeft_toRightOf="@+id/turn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_right"
            android:id="@+id/leftIndicator2"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/player2Symbol"
            app:layout_constraintRight_toLeftOf="@+id/player2Symbol"
            app:layout_constraintBottom_toBottomOf="@+id/player2Symbol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_left"
            android:id="@+id/rightIndicator2"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/player2Symbol"
            app:layout_constraintLeft_toRightOf="@+id/player2Symbol"
            app:layout_constraintBottom_toBottomOf="@+id/player2Symbol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/status"
            android:background="@color/colorLightBlue"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/board"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            tools:text="Winner"
            tools:visibility="visible"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/board"
            android:layout_marginTop="16dp"
            android:columnCount="3"
            android:rowOrderPreserved="true"
            android:rowCount="3"
            android:columnOrderPreserved="true"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <Button
                android:tag="button00"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button01"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button02"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button10"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button11"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button12"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button20"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button21"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <Button
                android:tag="button22"
                android:layout_gravity="top|start"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
        </GridLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.AppBarLayout>
