...
    <string name="FutureSelectRooms">Select rooms</string>
    <string name="InvalidButton">You must click on an empty button!  Try again.</string>
    <string name="MenuIconDesc">Floating action menu icon.</string>
    <string name="MyRooms">Go To My Rooms</string>
    <string name="NewGame">New Game</string>
    <string name="NoGamesMessageText">You have no games to view or play.  Use the button below to create one or join other rooms to play or watch ongoing games.</string>
    <string name="PlayAgain">Play again</string>
    <string name="PlayCheckers">Play Checkers</string>
    <string name="PlayChess">Play Chess</string>
    <string name="PlayTicTacToe">Play Tic-Tac-Toe</string>
    <string name="SignIn">Sign In</string>
    <string name="SignedOutMessageText">You are signed out.  You can play games while signed out but it is way more fun to use GameChat while signed in.</string>
    <string name="StartNewGame">Starting a new game.  Enjoy!</string>
...
    <string name="chess_promotion_queen">Queen</string>
    <string name="chess_promotion_rook">Rook</string>
    <string name="friend">Friend</string>
    <string name="game">Game</string>
    <string name="new_game_checkers">New Game (Checkers)</string>
    <string name="new_game_chess">New Game (Chess)</string>
    <string name="new_game_ttt">New Game (Tic-Tac-Toe)</string>
    <string name="oValue">O</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="turn">turn</string>
    <string name="vs">vs</string>
    <string name="wins">wins</string>
...
